--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -9,16 +9,19 @@
     tools:context=".ui.MainActivity">
 
     <EditText
+        android:layout_margin="16dp"
         android:id="@+id/et_oper1"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"/>
 
     <EditText
+        android:layout_margin="16dp"
         android:id="@+id/et_oper2"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"/>
 
     <TextView
+        android:layout_margin="16dp"
         android:textSize="25sp"
         android:id="@+id/tv_result"
         android:layout_width="match_parent"
